--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -14164,10 +14164,12 @@ The LaTeX export backend can use any of these LaTeX engines:
 files with different compilers, packages, and output options.  The
 LaTeX export backend finds the compiler version to use from
 ~org-latex-compiler~ variable or the =#+LATEX_COMPILER= keyword in the
-Org file.  See the docstring for the
-~org-latex-default-packages-alist~ for loading packages with certain
-compilers.  Also see ~org-latex-bibtex-compiler~ to set the
-bibliography compiler[fn:48].
+Org file. In conjunction with the ~org-latex-multi-lang-driver~
+variable or the ~#+LATEX_MULTI_LANG~ keyword below, it controls the
+package to support multiple languages and/or scripts in your document.
+See the docstring for the ~org-latex-default-packages-alist~ for
+loading packages with certain compilers.  Also see
+~org-latex-bibtex-compiler~ to set the bibliography compiler[fn:48].
 
 *** LaTeX specific export settings
 :PROPERTIES:
@@ -14252,18 +14254,19 @@ general options (see [[*Export Settings]]).
   new font control features are activated.  When it is either
   ~"babel"~ or ~"polyglossia"~, the package is imported and the
   =LANGUAGE= option is used to determine the main and secondary
-  languages. When it is ~nil~, the legacy treatment for multi-language
-  documents is activated.
+  languages. When it is ~nil~, multi-language documents are controlled
+  by importing the package with the ~#+LATEX_HEADER~ keyword.
 
   For example:
   #+BEGIN_SRC org :results none :exports code
 ,#+LANGUAGE: fr,de,es
 ,#+LATEX_MULTI_LANG: polyglossia
   #+END_SRC
-  would set the multi-language handling to use polyglossia on a
-  document, where the main language (i.e. header, figure, table names)
-  and typesetting options use French and indicate that there are
-  passages in German and Spanish.
+
+  sets multi-language handling to use ~polyglossia~ on a document, where
+  the main language (i.e. header, figure, table names) and typesetting
+  options use French: it also indicates that there are passages in German
+  and Spanish.
 
 - =KEYWORDS= ::
 
@@ -14370,7 +14373,6 @@ will assume the first one to be the main language in the list.
 For example, suppose a document declares Polytonic Greek as
 the primary language, and French as the secondary language using the
 =polyglossia= package to handle document languages:
-#+vindex: org-latex-polyglossia-languages
 
 #+begin_example
 ,#+LANGUAGE: el-polyton,fr
@@ -14393,6 +14395,33 @@ languages in the PDF output with the variable
 If you use =babel=, you can control the fonts used for different
 languages in the PDF output with the variable
 ~org-latex-babel-font-config~.
+
+When ~org-latex-multi-lang-driver~ is ~nil~, the value of
+~org-export-default-language~ will replace appearances of the string
+~"AUTO"~ when importing ~babel~ or ~polyglossia~ with a
+~#+LATEX_HEADER:~ keyword.
+
+For example:
+
+#+BEGIN_SRC org :results none :exports code
+,#+LANGUAGE: de
+,#+LATEX_COMPILER: pdflatex
+,#+LATEX_HEADER: \usepackage[AUTO,en-gb]{babel}
+#+END_SRC
+
+Will result in the LaTeX header
+
+#+BEGIN_SRC latex :results none :exports code
+\usepackage[de,en-gb]{babel}
+#+END_SRC
+
+in a first stage and that will be then translated to
+
+#+BEGIN_SRC latex :results none :exports code
+\usepackage[main=ngerman,british]{babel}
+#+END_SRC
+
+for the LaTeX export.
 
 *** Quoting LaTeX code
 :PROPERTIES:
@@ -14964,6 +14993,33 @@ contents, unless you set the =UNNUMBERED= property to =notoc=:
 :UNNUMBERED: notoc
 :END:
 #+end_example
+
+*** Controlling the font configuration for ~pdflatex~
+
+~pdflatex~ uses packages to import the fonts that will be used in the
+PDF output. Refer to [[https://tug.org/FontCatalogue/][the LaTeX font
+catalogue]] to find the LaTeX package or packages you need for your
+document and include them with the ~#+LATEX_HEADER:~ keyword.
+
+For example, if you need the
+[[https://tug.org/FontCatalogue/erewhon/][Erewhon]] font, you will see
+the following configuration in the linked page:
+
+#+BEGIN_SRC latex :results none :exports code
+\usepackage[proportional,scaled=1.064]{erewhon}
+\usepackage[erewhon,vvarbb,bigdelims]{newtxmath}
+\usepackage[T1]{fontenc}
+\renewcommand*\oldstylenums[1]{\textosf{#1}}
+#+END_SRC
+
+Since the exporter handles the ~fontenc~ package, you will not need
+to include that. Include the other commands in your document header:
+
+#+BEGIN_SRC org :results none :exports code
+,#+LATEX_HEADER: \usepackage[proportional,scaled=1.064]{erewhon}
+,#+LATEX_HEADER: \usepackage[erewhon,vvarbb,bigdelims]{newtxmath}
+,#+LATEX_HEADER: \renewcommand*\oldstylenums[1]{\textosf{#1}}
+#+END_SRC
 
 *** Controlling the font configuration for LuaLaTeX and XeLaTeX
 
